--- a/index.html
+++ b/index.html
@@ -9,3 +9,4 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <center><img src="Blooarch.png" alt="logo"></center>
 </head>
+<script>alert(Hey, this website is still in development right now, sorry!)</script>
