--- a/index.html
+++ b/index.html
@@ -12,3 +12,11 @@
 <script>
   alert("Hey, this website is still in development right now.  Come back later!");
 </script>
+<body>
+  <br /><br />
+      <div id="repos_data">
+        <i class="fa-solid fa-spinner fa-spin"></i> Loading...
+      </div>
+    </div>
+    <br />
+</body>
