--- a/index.html
+++ b/index.html
@@ -12,4 +12,4 @@
 <script>
   alert("Hey, this website is still in development right now.  Come back later!");
 </script>
-<script src="scripts/script.js"></script>
+<script src="script.js"></script>
