--- a/index.html
+++ b/index.html
@@ -12,4 +12,10 @@
 <script>
   alert("Hey, this website is still in development right now.  Come back later!");
 </script>
+   <br /><br />
+      <div id="repos_data">
+        <i class="fa-solid fa-spinner fa-spin"></i> Loading...
+      </div>
+    </div>
+    <br />
 <script src="script.js"></script>
