--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </script>
    <br /><br />
       <div id="repos_data">
-        <i class="fa-solid fa-spinner fa-spin"></i> Loading...
+        <i class="fa-solid fa-spinner fa-spin"></i> Fetching Contents...
       </div>
     </div>
     <br />
