--- a/index.html
+++ b/index.html
@@ -9,10 +9,15 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <center><img src="Blooarch.png" alt="logo"></center>
 </head>
+  <body>
    <br /><br />
       <div id="repos_data">
         <i class="fa-solid fa-spinner fa-spin"></i> Fetching Contents...
+         <div id="myProgress">
+  <div id="myBar"></div>
+</div>
       </div>
     </div>
     <br />
 <script src="script.js"></script>
+  </body>
